--- a/BeanSceneReservationApp/BeanSceneReservationApp.csproj
+++ b/BeanSceneReservationApp/BeanSceneReservationApp.csproj
@@ -32,4 +32,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\Images\Logo.jpg" />
+  </ItemGroup>
+
 </Project>
